app/globals.css
/* @import "tailwindcss"; */

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
  overflow: hidden;
  background-image: url(../public/assets/images/background.jpg);
  background-size: 'inherit'; 
  background-repeat: 'no-repeat'; 
  background-position: 'left'; 
  height: '100vh';
}

ul ul li:nth-child(1) {
  padding-top: 0.5rem;
  padding-bottom: 1rem;
}

li{
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-size: 19px;
  text-align: justify;
}

h1{
  /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
  font-size: 20px;
  font-weight: 530;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  text-align: center;
}

h4{
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  line-height: 1.5;
  font-weight: 530;
  margin: 0;
  padding: 0;
  text-align: left;
}

.my-container{
  margin-top: 2rem;
  font-weight: 530;
  color: #0a0a0a;
}

p{
  font-size: 20px;
  font-weight: 530;
}

.contact{
  margin-top: 10rem;
  justify-content: center;
  gap: 10rem;
}

.contact-i{
  font-size: 8rem;
}

#navbarNav ul > li > a:hover{
  color: black;
  background-color: #f8f9fa;
  border-radius: 5px;
  transition: ease-in-out 0.5s;
  padding: 0.5rem 1rem;
  font-size: 20px;
}

.fading-effect {
  animation: fadeInFromTop 0.5s ease-in-out;
  /* background-color: lightgray; */
  font-weight: 530;
  border-radius: 5rem;
}

.fading-effect div,.experience-container ul, .contact-fade div, .about-container p, .about-container ul ,.skills-container div{
  animation: fadeInFromTop 2s ease-in-out;
}

.about-container p{
  padding-top: 1rem;
  font-weight: 530;
}

.about-container ul{
  padding-bottom: 5rem;
}

@keyframes fadeInFromTop {
  from {
    opacity: 0;
    transform: translateY(-20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@media only screen and (max-width: 600px) {
  .contact{ 
    margin-top: 10px;
    gap: 1rem;
    align-items: center;
    flex-direction: column;
  }
  .my-container{
    margin-right: 2rem;
  }
  body{
    overflow: auto;
  }
  p{
    font-size: 18px;
  }
}
@media only screen and (max-width: 800px) {
  .contact{ 
    margin-top: 10px;
    gap: 0;
    align-items: center;
    flex-direction: column;
  }
  .my-container{
    overflow: auto;
    margin-right: 2rem;
  }
  body{
    overflow: auto;
  }
}

